--- a/package.json
+++ b/package.json
@@ -49,7 +49,8 @@
     "react-router-dom": "^6.23.1",
     "tailwind-merge": "^1.1.4",
     "tailwindcss-animate": "^1.0.7",
-    "uuid": "^11.0.3"
+    "uuid": "^11.0.3",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@babel/generator": "^7.27.0",
